# iot-sensor-platform

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  build.gradle  docker-compose.home.yml  docker-compose.yml  test.http
.claude/skills/what-is-this/: SKILL.md
.github/scripts/: propose-personal-hub-release.sh
.github/workflows/: ci.yml  publish-images.yml
ax/: .env.example  Dockerfile  README.md
ax/app/: dependencies.py  errors.py  middleware.py
ax/app/providers/: gemini.py
ax/tests/: test_health.py
docs/: CODE_REVIEW.md  PORTFOLIO_TODO.md  erd-ingest-model-b.html  gcp-archive.md  ingest-model-review.md
iot/: seed.sql  simulator.py
iot/data/: .gitignore  README.md  download.sh
scripts/: demo.sh
services/ax/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
services/ax/app/: dependencies.py  errors.py  main.py  schemas.py
services/ax/tests/: test_health.py
services/backend/: .dockerignore  .env.example  Dockerfile  build.gradle  settings.gradle  test.http
services/explain/: .env.example  Dockerfile  README.md  pyproject.toml
services/explain/app/: dependencies.py  main.py  schemas.py
services/explain/app/providers/: gemini.py
services/explain/app/routers/: anomaly.py  freshness.py
services/explain/tests/: conftest.py  test_health.py
services/simulator/: .dockerignore  .env.example  Dockerfile  seed.sql  simulator.py  test_simulator.py
services/simulator/data/: README.md  download.sh
src/main/resources/: application-prod.yml  application.properties  application.yml
(+346 files in other folders)
