[project]
name = "explain"
version = "0.1.0"
description = "IoT Sensor Platform — explain 서비스: 이상 근거·권고 생성, 데이터 끊김 원인 진단 (FastAPI + LLM)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    # Gemini provider 전용 — echo provider만 쓸 땐 미설치여도 무방(지연 import)
    "google-generativeai>=0.8.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
